@@ -1,6 +1,5 @@
 package org.codeforamerica.shiba;
 
-import static org.codeforamerica.shiba.County.Olmsted;
 import static org.codeforamerica.shiba.application.FlowType.LATER_DOCS;
 import static org.codeforamerica.shiba.application.Status.DELIVERED_BY_EMAIL;
 import static org.codeforamerica.shiba.application.Status.RESUBMISSION_FAILED;
@@ -14,9 +13,11 @@ import static org.codeforamerica.shiba.output.Recipient.CASEWORKER;
 
 import java.time.Duration;
 import java.time.ZonedDateTime;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.Set;
+
 import lombok.extern.slf4j.Slf4j;
 import net.javacrumbs.shedlock.spring.annotation.SchedulerLock;
 import org.codeforamerica.shiba.application.Application;
@@ -28,7 +29,6 @@ import org.codeforamerica.shiba.output.ApplicationFile;
 import org.codeforamerica.shiba.output.Document;
 import org.codeforamerica.shiba.output.pdf.PdfGenerator;
 import org.codeforamerica.shiba.pages.RoutingDecisionService;
-import org.codeforamerica.shiba.pages.config.FeatureFlagConfiguration;
 import org.codeforamerica.shiba.pages.emails.EmailClient;
 import org.codeforamerica.shiba.pages.events.ApplicationSubmittedEvent;
 import org.codeforamerica.shiba.pages.events.PageEventPublisher;
@@ -47,7 +47,6 @@ public class ResubmissionService {
   private final RoutingDecisionService routingDecisionService;
   private final ApplicationStatusRepository applicationStatusRepository;
   private final PageEventPublisher pageEventPublisher;
-  private final FeatureFlagConfiguration featureFlagConfiguration;
 
 
   public ResubmissionService(ApplicationRepository applicationRepository,
@@ -55,15 +54,13 @@ public class ResubmissionService {
       PdfGenerator pdfGenerator,
       RoutingDecisionService routingDecisionService,
       ApplicationStatusRepository applicationStatusRepository,
-      PageEventPublisher pageEventPublisher,
-      FeatureFlagConfiguration featureFlagConfiguration) {
+      PageEventPublisher pageEventPublisher) {
     this.applicationRepository = applicationRepository;
     this.emailClient = emailClient;
     this.pdfGenerator = pdfGenerator;
     this.routingDecisionService = routingDecisionService;
     this.applicationStatusRepository = applicationStatusRepository;
     this.pageEventPublisher = pageEventPublisher;
-    this.featureFlagConfiguration = featureFlagConfiguration;
   }
 
   @Scheduled(
@@ -96,11 +93,11 @@ public class ResubmissionService {
             routingDestinationName);
         if (document == UPLOADED_DOC) {
           resubmitUploadedDocumentsForApplication(document, application,
-              routingDestination.getEmail(), documentName);
+              routingDestination.getEmail(), documentName, routingDestination);
         } else {
-          var applicationFile = pdfGenerator.generate(application, document, CASEWORKER);
-          emailClient.resubmitFailedEmail(routingDestination.getEmail(), document, applicationFile,
-              application);
+          var applicationFile = pdfGenerator.generate(application, document, CASEWORKER, routingDestination);
+          emailClient.resubmitFailedEmail(routingDestination.getEmail(), document, applicationFile, application);
+          log.info("Sending resubmit failed email to " + routingDestination.getEmail() + " for application " + id);
         }
         applicationStatusRepository.createOrUpdate(id, document, routingDestinationName, DELIVERED_BY_EMAIL, documentName);
         log.info("Resubmitted %s(s) for application id %s".formatted(document.name(), id));
@@ -146,14 +143,15 @@ public class ResubmissionService {
   @SchedulerLock(name = "noStatusEsbResubmissionTask", lockAtMostFor = "${no-status-applications-resubmission.lockAtMostFor}", lockAtLeastFor = "${no-status-applications-resubmission.lockAtLeastFor}")
   public void resubmitBlankStatusApplicationsViaEsb() {
     log.info("Checking for applications that have no statuses");
-
-    List<Application> applicationsWithBlankStatuses;
-
-    if (featureFlagConfiguration.get("only-submit-blank-status-apps-from-olmsted").isOn()) {
-      applicationsWithBlankStatuses = applicationRepository.findApplicationsWithBlankStatuses(
-          Olmsted);
-    } else {
-      applicationsWithBlankStatuses = applicationRepository.findApplicationsWithBlankStatuses();
+    List<Application> applicationsWithBlankStatusRows = applicationRepository.findApplicationsWithBlankStatuses();
+    
+    // Filter out applications where no programs were selected. This shouldn't be possible but it has occurred.
+    ArrayList<Application> applicationsWithBlankStatuses = new ArrayList<Application>();
+    for (Application application : applicationsWithBlankStatusRows) {
+    	Set<String> programs = application.getApplicationData().getApplicantAndHouseholdMemberPrograms();
+    	if (!(programs.size() == 1 && programs.contains("NONE"))) {
+    		applicationsWithBlankStatuses.add(application);
+    	}
     }
 
     MDC.put("blankStatusApps", String.valueOf(applicationsWithBlankStatuses.size()));
@@ -190,12 +188,7 @@ public class ResubmissionService {
             List.of(CAF, CCAP, CERTAIN_POPS)
                 .contains(documentStatus.getDocumentType())).map(
             ApplicationStatus::getDocumentType
-        ).collect(Collectors.toList());
-
-    if (shouldDeleteDocumentStatuses) {
-      // Will be recreated on submit event
-      applicationStatusRepository.delete(id, documentTypesInSending);
-    }
+        ).toList();
 
     boolean shouldRefireAppSubmittedEvent = documentTypesInSending.stream()
         .anyMatch(document -> List.of(CAF, CCAP, CERTAIN_POPS).contains(document));
@@ -244,19 +237,18 @@ public class ResubmissionService {
   }
 
   private void resubmitUploadedDocumentsForApplication(Document document, Application application,
-      String recipientEmail, String documentName) {
+      String recipientEmail, String documentName, RoutingDestination routingDestination) {
     var coverPage = pdfGenerator.generateCoverPageForUploadedDocs(application);
     var uploadedDocs = application.getApplicationData().getUploadedDocs();
     var failedDoc = uploadedDocs.stream()
-        .filter(uploadedDoc -> uploadedDoc.getSysFileName().equals(documentName))
-        .collect(Collectors.toList());
-    ApplicationFile fileToSend =
-        pdfGenerator.generateForUploadedDocument(failedDoc.get(0), 0, application, coverPage);
-    var esbFilename = fileToSend.getFileName();
+        .filter(uploadedDoc -> uploadedDoc.getSysFileName().equals(documentName)).toList();
+    List<ApplicationFile> fileToSend =
+        pdfGenerator.generateCombinedUploadedDocument(List.of(failedDoc.get(0)), application, coverPage, routingDestination);
+    var esbFilename = fileToSend.get(0).getFileName();
     var originalFilename = failedDoc.get(0).getFilename();
     log.info("Resubmitting uploaded doc: %s original filename: %s".formatted(esbFilename,
         originalFilename));
-    emailClient.resubmitFailedEmail(recipientEmail, document, fileToSend, application);
+    emailClient.resubmitFailedEmail(recipientEmail, document, fileToSend.get(0), application);
     log.info("Finished resubmitting document %s".formatted(esbFilename));
   }
 }
